Hide side with Button

--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -28,7 +28,9 @@
     <div class="sideBarHeader">
     <h3>Html css js examples</h3>
    <a href=""><img src="../../img/favicon-32x32.png" alt="" class="logo"></a>
+   <!-- link to show  -->
 
+   <!-- end link to show -->
   
     </div>
     <!-- end of sideBar header -->
@@ -37,7 +39,7 @@
     <a href="#" class="master-link">vanilla js</a>
     <a href="#" class="arrowDown"><i class="fa fa-sort-down"></i></a>
     <div class="subContainer">
-
+       
     <a href="../examples/lorem text/index.html" class="sub-link" data-learn="css animation,css grid, js array map(),js math random()">lorem text paraghraphs</a>
 
     <a href="../examples/expand cards/index.html" class="sub-link" data-learn="css flex,css transition delay, js array classlist">expanding-cards</a>
@@ -82,6 +84,8 @@
 
     <a href="../examples/joe slider/index.html" class="sub-link" data-learn=" ">joe slider</a>
 
+    <a href="../examples/rotate nav/index.html" class="sub-link" data-learn=" ">rotate nav</a>
+
     </div>
     <!-- end of single link -->
 
@@ -91,10 +95,10 @@
 
     
     <!-- content -->
-    <iframe src="../examples/joe slider/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
+    <iframe src="../examples/expand cards/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
     <!-- end of content -->
    </div>
-
+   <button class="showSide" id="showSide"><i class="fa fa-bars"></i></button>
 <!-- end of container -->
  </main>
 
