rotate nav with faqr

--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -95,7 +95,7 @@
 
     
     <!-- content -->
-    <iframe src="../examples/expand cards/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
+    <iframe src="../examples/rotate nav/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
     <!-- end of content -->
    </div>
    <button class="showSide" id="showSide"><i class="fa fa-bars"></i></button>
