finish rotate nav and start random picker

--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -86,6 +86,8 @@
 
     <a href="../examples/rotate nav/index.html" class="sub-link" data-learn=" ">rotate nav</a>
 
+    <a href="../examples/random picker/index.html" class="sub-link" data-learn=" ">random picker</a>
+
     </div>
     <!-- end of single link -->
 
@@ -95,7 +97,7 @@
 
     
     <!-- content -->
-    <iframe src="../examples/rotate nav/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
+    <iframe src="../examples/random picker/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
     <!-- end of content -->
    </div>
    <button class="showSide" id="showSide"><i class="fa fa-bars"></i></button>
