--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h4>for web development</h4>
     </div>
 
-    <div class="road-map">
-  <a href="./skills/javascript/js.html" class="btn">javascrip</a>
+<div class="road-map">
+  <a href="./skills/javascript/js.html" class="btn">js</a>
   <a href="#" class="btn">css</a>
   <a href="./skills/examples/css.html" class="btn">html css js</a>
   <a href="#" class="btn">node js</a>
