--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -97,7 +97,7 @@
 
     
     <!-- content -->
-    <iframe src="../examples/random picker/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
+    <iframe src="../examples/progress bar/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
     <!-- end of content -->
    </div>
    <button class="showSide" id="showSide"><i class="fa fa-bars"></i></button>
