--- a/skills/examples/progress bar/index.html
+++ b/skills/examples/progress bar/index.html
@@ -11,9 +11,19 @@
     <title>lorem</title>
 </head>
 <body>
-<div class="container">
-    
-    </div>
+<div class="container1">
+  <div class="progress-container">
+    <div class="progress" id="progress"></div>
+    <div class="circle active">1</div>
+    <div class="circle">2</div>
+    <div class="circle">3</div>
+    <div class="circle">4</div>
+  </div>  
+  <div class="button-group1">
+    <button class="btn prev" id="prev">prev</button>
+    <button class="btn next" id="next">next</button>
+  </div>
+</div>
 </div>
 
 <a href="#" class="showCode" id="showCode"><i class="fa fa-code"></i></a>
@@ -24,7 +34,20 @@
    <div class="coding code-html">
     <pre>
 <code class="language-html">
-
+  &lt;div class="container1">
+  &lt;div class="progress-container">
+    &lt;div class="progress" id="progress">&lt;/div>
+    &lt;div class="circle active">1&lt;/div>
+    &lt;div class="circle">2&lt;/div>
+    &lt;div class="circle">3&lt;/div>
+    &lt;div class="circle">4&lt;/div>
+  &lt;/div>  
+  &lt;div class="button-group1">
+    &lt;button class="btn prev" id="prev">prev&lt;/button>
+    &lt;button class="btn next" id="next">next&lt;/button>
+  &lt;/div>
+&lt;/div>
+&lt;/div>
 </code>
 </pre>
   </div>
@@ -34,7 +57,114 @@
 <div class="coding code-css">
 <pre>
 <code class="language-css">
-
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  
+  .container1 {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+    background: linear-gradient(
+      90deg,
+      rgba(131, 58, 180, 1) 0%,
+      rgba(253, 29, 29, 1) 50%,
+      rgba(252, 176, 69, 1) 100%
+    );
+  }
+  
+  .progress-container {
+    flex: 0 0 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+    margin-bottom: 2rem;
+  }
+  
+  .progress-container::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    background: rgb(255, 250, 250);
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    z-index: -1;
+  }
+  
+  .progress-container .progress {
+    position: absolute;
+    width: 0;
+    height: 10px;
+    background: rgba(50, 61, 128, 0.822);
+    top: 50%;
+    left: 0;
+    z-index: 5;
+    transform: translateY(-50%);
+    z-index: -1;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .progress-container .circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background: #fff;
+    display: grid;
+    place-items: center;
+    border: 10px solid #fff;
+    transition: all 0.5s linear;
+    font-size: 1.8rem;
+  }
+  
+  .circle.active {
+    border: 10px solid rgba(50, 61, 128, 0.822);
+  }
+  
+  .btn{
+      padding: 0.5rem 1.6rem;
+      border-radius: 10px;
+      font-size: 1.5rem;
+      text-transform: capitalize;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      transition: all 0.5s linear;
+      margin-left: 1.25rem;
+  }
+  .button-group1{
+      flex: 0 0 100%;
+     display: flex;
+     justify-content: center;
+  }
+  .next{
+      background: rgb(50, 94, 50);
+      color: #fff;
+  }
+  .prev{
+      background: rgb(114, 4, 13);
+      color: #fff;
+  }
+  
+  .btn.disable{
+      cursor: not-allowed;
+      background: transparent;
+      border: 1px solid #fff;
+  }
 </code>
 </pre>
   </div>
@@ -43,7 +173,65 @@
 <div class="coding code-js">
 <pre>
 <code class="language-js">
-
+  //variables
+  const next = document.getElementById("next");
+  const prev = document.getElementById("prev");
+  
+  const progressBar = document.getElementById("progress");
+  
+  const circles = document.querySelectorAll(".circle");
+  let start = 0;
+  
+  function progressEdit() {
+      // circle edit
+    circles.forEach((circle, i) => {
+      if (i <= start) {
+        circle.classList.add("active");
+      } else {
+        circle.classList.remove("active");
+      }
+    });
+  
+  
+    //progress bar edit
+    const widthBar =
+      (document.querySelectorAll(".active").length - 1) /
+      (document.querySelectorAll(".circle").length - 1);
+    console.log(widthBar);
+    progressBar.style.width = `${widthBar * 100}%`;
+  
+  
+    //button edit
+    if (
+      document.querySelectorAll(".active").length ===
+      document.querySelectorAll(".circle").length
+    ) {
+      next.disabled = true;
+      next.classList.add("disable");
+    } else if (document.querySelectorAll(".active").length === 1) {
+      prev.disabled = true;
+      prev.classList.add("disable");
+    } else {
+      next.disabled = false;
+      prev.disabled = false;
+      next.classList.remove("disable");
+      prev.classList.remove("disable");
+    }
+  }
+  
+  progressEdit();
+  
+  function progressPlus() {
+    start++;
+    progressEdit();
+  }
+  function progressMins() {
+    start--;
+    progressEdit();
+  }
+  
+  next.addEventListener("click", progressPlus);
+  prev.addEventListener("click", progressMins);
   </code>
   </pre>
 </div>
