--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -44,7 +44,7 @@
 
     <a href="../examples/expand cards/index.html" class="sub-link" data-learn="css flex,css transition delay, js array classlist">expanding-cards</a>
 
-    <a href="../examples/expand cards/index.html" class="sub-link" data-learn="css flex,css transition delay, js array classlist">progress bar</a>
+    <a href="../examples/progress bar/index.html" class="sub-link" data-learn="css flex,css transition delay, js array classlist">progress bar</a>
 
     <a href="../examples/hidden search/index.html" class="sub-link" data-learn="class list , classList.toggle">hidden search</a>
 
@@ -88,6 +88,8 @@
 
     <a href="../examples/random picker/index.html" class="sub-link" data-learn=" ">random picker</a>
 
+    <a href="../examples/waiting/index.html" class="sub-link" data-learn=" ">waiting</a>
+
     </div>
     <!-- end of single link -->
 
@@ -97,7 +99,7 @@
 
     
     <!-- content -->
-    <iframe src="../examples/progress bar/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
+    <iframe src="../examples/waiting/index.html" frameborder="0" class="masterFrame" width="100%" ></iframe>
     <!-- end of content -->
    </div>
    <button class="showSide" id="showSide"><i class="fa fa-bars"></i></button>
