--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="road-map">
   <a href="./skills/javascript/js.html" class="btn">js</a>
   <a href="#" class="btn">css</a>
-  <a href="./skills/examples/css.html" class="btn">html css js</a>
+  <a href="./skills/examples/gallery.html" class="btn">html css js</a>
   <a href="#" class="btn">node js</a>
   <a href="#" class="btn">git</a>
   <a href="#" class="btn">git</a>
