edit index page

--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -22,9 +22,9 @@
                 <div class="links-container">
                     <ul class="links-Nav">
                         <li class="link-Nav"><a href="#cssOnly">css only</a></li>
-                        <li class="link-Nav"><a href="">basic</a></li>
-                        <li class="link-Nav"><a href="">intermediate</a></li>
-                        <li class="link-Nav"><a href="">advanced</a></li>
+                        <li class="link-Nav"><a href="#basic">basic</a></li>
+                        <li class="link-Nav"><a href="#intermediate">intermediate</a></li>
+                        <li class="link-Nav"><a href="#advanced">advanced</a></li>
                     </ul>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 <a href="../examples/expand cards/index.html">
                 <img src="../../img/gallerycss/css basic/expandingcard.gif" alt="" class="card-img">
                 <div class="overlay">
-                    <h3 class="project title">Event Propagation</h3>
+                    <h3 class="project title">expanding cards</h3>
                     <div class="learning">
                         <span class="magic-js">array.forEach</span>
                         <span class="magic-js">classList.add</span>
@@ -176,7 +176,7 @@
 
 
 
-    <script src="../../js/main.js"></script>
+    <script src="../../js/gallery.js"></script>
 </body>
 
 </html>
