--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -44,9 +44,9 @@
     <a href="#" class="arrowDown"><i class="fa fa-sort-down"></i></a>
     <small class="count">2</small>
     <div class="subContainer">
-    <a href="../examples/css grid/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/gridcss.gif">css grid</a>
+    <a href="../examples/css grid/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/gridcss.JPG">css grid</a>
 
-    <a href="../examples/waiting/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/waiting2.gif">waiting</a>
+    <a href="../examples/waiting/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/waiting.JPG">waiting</a>
     </div>
     </div>
     <!-- end of single link -->
@@ -58,7 +58,9 @@
     <small class="count">2</small>
     <div class="subContainer">
 
-        <a href="../examples/expand cards/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/expandingcard.gif">expanding-cards</a>
+        <a href="../examples/expand cards/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/expandingcard.JPG">expanding-cards</a>
+        <a href="../examples/goodcheapfast/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/cheapfastgood.JPG">good fast cheap</a>
+        <a href="../examples/animationNav/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/animationvaigator.JPG"> animation navigator</a>
 
         <a href="../examples/hidden search/index.html" class="sub-link" data-learn="">hidden search</a>
          
@@ -70,7 +72,7 @@
 
         <a href="../examples/joe model/index.html" class="sub-link" data-learn="">joe model</a>
 
-        <a href="../examples/Event Propagation/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/popogation.gif">Event Propagation</a>
+        <a href="../examples/Event Propagation/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/popogation.JPG">Event Propagation</a>
 
 
     </div>
@@ -88,7 +90,7 @@
 
         <a href="../examples/progress bar/index.html" class="sub-link" data-learn="">progress bar</a>
 
-        <a href="../examples/blurry loading/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/Animation.gif">blurry loading</a>
+        <a href="../examples/blurry loading/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/blurring.JPG">blurry loading</a>
 
         <a href="../examples/wave label/index.html" class="sub-link" data-learn="">wave label</a>
 
@@ -98,7 +100,7 @@
 
         <a href="../examples/joe Tapped/index.html" class="sub-link" data-learn="">joe Tapped</a>
 
-        <a href="../examples/animation fade/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/fade.gif">animation fade</a>
+        <a href="../examples/animation fade/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/fade.JPG">animation fade</a>
 
         <a href="../examples/joe slider/index.html" class="sub-link" data-learn="">joe slider</a>
 
