--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -47,7 +47,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/waiting/index.html">
-                <img src="../../img/gallerycss/css basic/waiting2.gif" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/waiting.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">waiting logo</h3>
                     <div class="learning">
@@ -67,7 +67,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/css grid/index.html">
-                <img src="../../img/gallerycss/css basic/gridcss.gif" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/gridcss.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">css grid</h3>
                     <div class="learning">
@@ -89,8 +89,38 @@
         <div class="section-container">
             <!-- qwe single card -->
             <div class="card">
-                <a href="../examples/animation fade/index.html">
-                <img src="../../img/gallerycss/css basic/popogation.gif" alt="" class="card-img">
+                <a href="../examples/animationNav/index.html">
+                <img src="../../img/gallerycss/css basic/animationvaigator.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">animation navigation</h3>
+                    <div class="learning">
+                        <span class="magic-css">transform</span>
+                        <span class="magic-css">rotateY</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/goodcheapfast/index.html">
+                <img src="../../img/gallerycss/css basic/cheapfastgood.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">good cheap fast</h3>
+                    <div class="learning">
+                        <span class="magic-css">label for</span>
+                        <span class="magic-css">animation</span>
+                        <span class="magic-css">@keyframes</span>
+                        <span class="magic-js">e.traget</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/Event Propagation/index.html">
+                <img src="../../img/gallerycss/css basic/popogation.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">Event Propagation</h3>
                     <div class="learning">
@@ -105,7 +135,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/expand cards/index.html">
-                <img src="../../img/gallerycss/css basic/expandingcard.gif" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/expandingcard.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">expanding cards</h3>
                     <div class="learning">
@@ -132,7 +162,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/animation fade/index.html">
-                <img src="../../img/gallerycss/css basic/fade.gif" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/fade.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">animation fade</h3>
                     <div class="learning">
@@ -148,7 +178,7 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/blurry loading/index.html">
-                <img src="../../img/gallerycss/css basic/Animation.gif" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/blurring.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">blurry loading</h3>
                     <div class="learning">
