--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -86,6 +86,7 @@
     <small class="count">2</small>
     <div class="subContainer">
   
+        <a href="../examples/background Slider/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/backgroundSlider.JPG">background slider</a>
         <a href="../examples/lorem text/index.html" class="sub-link" data-learn="">lorem text paraghraphs</a>
 
         <a href="../examples/progress bar/index.html" class="sub-link" data-learn="">progress bar</a>
