--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -161,6 +161,22 @@
         <div class="section-container">
             <!-- qwe single card -->
             <div class="card">
+                <a href="../examples/background Slider/index.html">
+                <img src="../../img/gallerycss/css basic/backgroundSlider.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">backgroun slider</h3>
+                    <div class="learning">
+                        <span class="magic-js">el.closest</span>
+                        <span class="magic-js">.bind</span>
+                        <span class="magic-css">flex</span>
+                        <span class="magic-css">object-fit</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
                 <a href="../examples/animation fade/index.html">
                 <img src="../../img/gallerycss/css basic/fade.JPG" alt="" class="card-img">
                 <div class="overlay">
