edit slider nav

--- a/skills/examples/background Slider/index.html
+++ b/skills/examples/background Slider/index.html
@@ -14,13 +14,13 @@
 
 <div class="container1">
 <div class="sider-container">
-  <div class="slide" style="background: Url('../background Slider/img/1.jpg');">
+  <div class="slide" style="background: Url('../background Slider/img/1.jpg')center/cover no-repeat;">
   </div>
-  <div class="slide" style="background: Url('../background Slider/img/2.jpg');">
+  <div class="slide" style="background: Url('../background Slider/img/2.jpg')center/cover no-repeat;">
   </div>
-  <div class="slide" style="background: Url('../background Slider/img/3.jpg');">
+  <div class="slide" style="background: Url('../background Slider/img/3.jpg')center/cover no-repeat;">
   </div>
-  <div class="slide" style="background: Url('../background Slider/img/4.jpg');">
+  <div class="slide" style="background: Url('../background Slider/img/4.jpg')center/cover no-repeat;">
   </div>
 </div>
 
