--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -162,9 +162,9 @@
             <!-- qwe single card -->
             <div class="card">
                 <a href="../examples/random slider/index.html">
-                <img src="../../img/gallerycss/css basic/backgroundSlider.JPG" alt="" class="card-img">
+                <img src="../../img/gallerycss/css basic/range slider.JPG" alt="" class="card-img">
                 <div class="overlay">
-                    <h3 class="project title">backgroun slider</h3>
+                    <h3 class="project title">range slider</h3>
                     <div class="learning">
                         <span class="magic-js">el.closest</span>
                         <span class="magic-js">.bind</span>
