--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -58,7 +58,10 @@
     <small class="count">2</small>
     <div class="subContainer">
 
+        <a href="../examples/ripple button/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/ripple button.JPG">ripple button</a>
+
         <a href="../examples/expand cards/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/expandingcard.JPG">expanding-cards</a>
+        <a href="../examples/mobile nav/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/mobile nav.JPG">mobile nav</a>
         <a href="../examples/goodcheapfast/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/cheapfastgood.JPG">good fast cheap</a>
         <a href="../examples/animationNav/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/animationvaigator.JPG"> animation navigator</a>
 
