--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -89,13 +89,44 @@
         <div class="section-container">
             <!-- qwe single card -->
             <div class="card">
+                <a href="../examples/ripple button/index.html">
+                <img src="../../img/gallerycss/css basic/ripple button.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">ripple button</h3>
+                    <div class="learning">
+                        <span class="magic-js">e.clientX</span>
+                        <span class="magic-js">e.clientY</span>
+                        <span class="magic-css">animation</span>
+                        <span class="magic-js">offsetTop</span>
+                        <span class="magic-js">offsetLeft</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/mobile nav/index.html">
+                <img src="../../img/gallerycss/css basic/mobile nav.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">mobile nav</h3>
+                    <div class="learning">
+                        <span class="magic-css">position</span>
+                        <span class="magic-css">flex</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
                 <a href="../examples/animationNav/index.html">
                 <img src="../../img/gallerycss/css basic/animationvaigator.JPG" alt="" class="card-img">
                 <div class="overlay">
                     <h3 class="project title">animation navigation</h3>
                     <div class="learning">
-                        <span class="magic-css">transform</span>
-                        <span class="magic-css">rotateY</span>
+                        <span class="magic-css">grid</span>
+                        <span class="magic-css">flex</span>
                     </div>
                 </div>
             </a>
