--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -144,8 +144,8 @@
     <a href="#" class="arrowDown"><i class="fa fa-sort-down"></i></a>
     <small class="count">2</small>
     <div class="subContainer">
-  
-        <a href="../examples/scroll animation/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/scroll animation.JPG">counter OOP</a>
+        <a href="../examples/counter oop/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/counteroop.JPG">counter OOP</a>
+        <a href="../examples/gallery oop/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/gallery oop.JPG">gallery OOP</a>
     </div>
     </div>
     <!-- end of single link -->
