--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -527,7 +527,22 @@
                 <div class="overlay">
                     <h3 class="project title">counter oop</h3>
                     <div class="learning">
-
+                       <span class="magic-js">oop fn constructor</span>
+                       <span class="magic-js">oop ES6 classes</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/gallery oop/index.html">
+                <img src="../../img/gallerycss/css basic/gallery oop.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">gallery oop</h3>
+                    <div class="learning">
+                       <span class="magic-js">oop fn constructor</span>
+                       <span class="magic-js">oop ES6 classes</span>
                     </div>
                 </div>
             </a>
