--- a/skills/examples/css.html
+++ b/skills/examples/css.html
@@ -111,7 +111,9 @@
 
         <a href="../examples/rotate nav/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/rotatenav.JPG">rotate nav</a>
 
-        <a href="../examples/random picker/index.html" class="sub-link" data-learn="">random picker</a>
+        <a href="../examples/random picker/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/randomPicker.JPG">random picker</a>
+
+        <a href="../examples/notifacations/index.html" class="sub-link" data-learn="../../img/gallerycss/css basic/notification.JPG">notification</a>
 
     </div>
     </div>
