--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -435,6 +435,20 @@
             </a>
             </div>
 <!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/notifacations/index.html">
+                <img src="../../img/gallerycss/css basic/notification.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">notifacations</h3>
+                    <div class="learning">
+                        <span class="magic-js">settimeout</span>
+                        <span class="magic-css">.remove()</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
         </div>
     </section>
 <!-- end of section -->
