--- a/skills/examples/gallery.html
+++ b/skills/examples/gallery.html
@@ -562,6 +562,20 @@
             </a>
             </div>
 <!--qwe end of single card -->
+            <!-- qwe single card -->
+            <div class="card">
+                <a href="../examples/oop mapty/index.html">
+                <img src="../../img/gallerycss/css basic/gallery oop.JPG" alt="" class="card-img">
+                <div class="overlay">
+                    <h3 class="project title">mapty oop</h3>
+                    <div class="learning">
+                       <span class="magic-js">oop fn constructor</span>
+                       <span class="magic-js">oop ES6 classes</span>
+                    </div>
+                </div>
+            </a>
+            </div>
+<!--qwe end of single card -->
         </div>
     </section>
 <!-- end of section -->
